fixed image overlap

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -102,7 +102,7 @@ main section img {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px; 
+    margin-top: 100px; 
 }
 
 #hero-box {
